# Funkify

./: .gitignore  CMakeLists.txt  foo_input_vgmstream.fb2k-component
include/: ASTInfo.hpp  FFTs.hpp  InverseTransformation.hpp  JointTransformations.hpp  Transforms.hpp  derivativeTrans.hpp  nothing_transform.hpp  swaps.h  transformation.hpp
src/: ASTInfo.cpp  main.cpp
